--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 # ------------------------------------
 # -------- Project Information -------
 # ------------------------------------
-site_name: NCAR MkDocs Template
-site_description: A template for creating NCAR mkdocs
-repo_url: https://github.com/NCAR/NCAR_mkdocs_template/
-site_url: https://NCAR.github.io/NCAR_mkdocs_template/
-site_author: CISL CSG (Consulting Services Group)
+site_name: CSF Community Playbook
+site_description: All avenues for information and community engagement related to NSF NCAR's Community Software Facility (CSF)
+repo_url: https://github.com/NCAR/CSF/
+site_url: https://NCAR.github.io/CSF/
+site_author: NSF NCAR Community Software Facility (CSF)
 edit_uri: edit/main/docs/
 
 # directories to watch for automatic rebuilding when running "mkdocs serve"
@@ -33,8 +33,6 @@ validation:
 # ------------------------------------
 nav:
   - Home : index.md
-
-  - How to Use This Template?: getting-started.md
 
 # ------------------------------------
 # -- configuration - themes
